[gd_scene load_steps=12 format=3 uid="uid://ls4gn2jp3ogx"]

[ext_resource type="Script" path="res://scripts/Menu.gd" id="1_7qtnw"]
[ext_resource type="Texture2D" uid="uid://cgmyatonbqks" path="res://assets/original/empty.png" id="2_ilbwe"]
[ext_resource type="Texture2D" uid="uid://dlt7nutnsbthm" path="res://assets/original/Buttons/left.png" id="3_lsfw5"]
[ext_resource type="Texture2D" uid="uid://c1fhixy3ppr13" path="res://assets/original/Buttons/right.png" id="4_8a5hb"]
[ext_resource type="Texture2D" uid="uid://o5txwqh1olvk" path="res://assets/original/Buttons/BLevelXEmpty.png" id="5_2jhlf"]
[ext_resource type="Texture2D" uid="uid://bu21iu46pf57f" path="res://assets/original/Buttons/BLevel1Glow.png" id="6_eetwa"]
[ext_resource type="Texture2D" uid="uid://cltykmxgxdblj" path="res://assets/original/Buttons/settings.png" id="7_rbs06"]
[ext_resource type="Texture2D" uid="uid://bbhggnuww5mxe" path="res://assets/original/Logo.png" id="8_1pny3"]
[ext_resource type="AudioStream" uid="uid://13g1x2kqvbqf" path="res://assets/sounds/click interface.mp3" id="9_ru2iw"]
[ext_resource type="Texture2D" uid="uid://bhywmucg6ko14" path="res://assets/original/Blocks/Base/coin.png" id="10_2vnl8"]
[ext_resource type="Texture2D" uid="uid://dxq75fnrpc61q" path="res://assets/original/Blocks/Glow/coinGlow.png" id="11_audb7"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7qtnw")
metadata/Level = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(17452, 3091)
scale = Vector2(1706, 1177.33)
texture = ExtResource("2_ilbwe")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -448.0
offset_top = -212.0
offset_right = 448.0
offset_bottom = 220.0

[node name="Left" type="Button" parent="HSplitContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
icon = ExtResource("3_lsfw5")
flat = true

[node name="Right" type="Button" parent="HSplitContainer"]
layout_direction = 3
layout_mode = 2
toggle_mode = true
button_pressed = true
icon = ExtResource("4_8a5hb")
flat = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.0
offset_top = -224.0
offset_right = 324.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
tooltip_text = "Play this level"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 160
text = "Level 1"
icon = ExtResource("5_2jhlf")
flat = true
icon_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/VBoxContainer/Button"]
z_index = -1
position = Vector2(324, 236)
texture = ExtResource("6_eetwa")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.305
anchor_right = 0.5
anchor_bottom = 0.305
offset_left = -544.0
offset_top = -732.0
offset_right = 544.0
offset_bottom = 208.0

[node name="Sprite2D" type="Sprite2D" parent="CenterContainer"]
position = Vector2(540, 700)
texture = ExtResource("8_1pny3")

[node name="ClickButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_ru2iw")
bus = &"SFX"

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(62, 60)
texture = ExtResource("10_2vnl8")

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D2"]
texture = ExtResource("11_audb7")

[node name="coins_label" type="Label" parent="."]
layout_mode = 2
offset_left = 132.0
offset_top = -25.0
offset_right = 201.0
offset_bottom = 140.0
theme_override_font_sizes/font_size = 120
text = "0"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_direction = 2
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -208.0
offset_right = 335.0
grow_vertical = 0

[node name="Settings Button" type="Button" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
icon = ExtResource("7_rbs06")
flat = true

[connection signal="button_up" from="HSplitContainer/Left" to="." method="_on_left_button_up"]
[connection signal="button_up" from="HSplitContainer/Right" to="." method="_on_right_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_button_up"]
[connection signal="button_up" from="VBoxContainer2/Settings Button" to="." method="_on_settings_button_button_up"]
